--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
-body {
-background-color;#E5E5E5
-color:  #212121
+.body {
+background-color:#E5E5E5
+color  #212121
+}
+ul {
+    list-style: none; 
 }
 /* цвет основного текста color: #212121 */
 /* вторичний цвет: #757575     */
@@ -18,7 +21,15 @@ color:  #212121
 }
 
 /* site-nav */
-.site-nav a {
+.site-nav .link {
     color: #212121;
 }
+.site-nav .link :hover,
+.site-nav .link-focus {
+    color: #000000
+}
 
+.section, section-title {
+    color: #212121;
+    
+}
